# feathered

./: Cargo.toml
feathered/: Cargo.toml
feathered/src/: lib.rs
feathered_common/: Cargo.toml
feathered_common/src/: lib.rs  window_handles.rs
feathered_physics/: Cargo.toml
feathered_physics/src/: aabb.rs  gjk.rs  lib.rs
feathered_pipelines/: Cargo.toml
feathered_pipelines/src/: lib.rs  model_renderer.rs  texture_renderer.rs
feathered_pipelines/src/shaders/: model.wgsl  texture.wgsl
feathered_proc/: Cargo.toml
feathered_proc/src/: lib.rs
feathered_render_tools/: Cargo.toml
feathered_render_tools/src/: camera.rs  lib.rs  shared.rs  texture.rs  tools.rs
feathered_runner/: Cargo.toml
feathered_runner/src/: events.rs  lib.rs  window.rs
feathered_shipyard/: Cargo.toml
feathered_shipyard/src/: builder.rs  events.rs  lib.rs  runner.rs  tools.rs
feathered_spatial/: Cargo.toml
feathered_spatial/src/: lib.rs
feathered_text/: Cargo.toml
feathered_text/src/: lib.rs  shared.rs  text2d.rs  text3d.rs  text3d.wgsl  text_atlas.rs
feathered_tools/: Cargo.toml
feathered_tools/src/: input.rs  lib.rs
