[package]
name = "feathered_physics"
version = "0.1.0"
edition = "2021"

[dependencies]
feathered_common.path = "../feathered_common"
feathered_render_tools.path = "../feathered_render_tools"
feathered_shipyard.path = "../feathered_shipyard"
feathered_spatial.path = "../feathered_spatial"
glam = "0.29.2"
log = "0.4.22"
ordered-float = "4.5.0"
shipyard = "0.7.4"
