[package]
name = "feathered_render_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.19.0", features = ["derive"] }
feathered_common.path = "../feathered_common"
feathered_shipyard.path = "../feathered_shipyard"
glam = { version = "0.29.0", features = ["bytemuck"] }
image = "0.25.4"
log = "0.4.22"
pollster = "0.3.0"
shipyard = "0.7.3"
wgpu = "23"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "23", features = ["webgl"] }
