[package]
name = "feathered_text"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.19.0", features = ["derive"] }
cosmic-text = "0.12.1"
etagere = "0.2.13"
feathered_common.path = "../feathered_common"
feathered_render_tools.path = "../feathered_render_tools"
feathered_shipyard.path = "../feathered_shipyard"
feathered_spatial.path = "../feathered_spatial"
glam = { version = "0.29.1", features = ["bytemuck"] }
log = "0.4.22"
lru = "0.12.5"
rustc-hash = "2.0.0"
shipyard = "0.7.3"
wgpu = "23.0.0"
